<resources>
    <string name="app_name">VerificationNumber</string>
    <string name="najda_code_verification">Najda Code Verification</string>
    <string name="code_text">We will send You a Code on this Mobile Number</string>
    <string name="code_verification_number">Enter Your Phone Number</string>
    <string name="_212">+212</string>
    <string name="_658142766">-658142766</string>
    <string name="get_your_verification_code">Get Your Verification Code</string>
    <string name="enter_the_code_sent_to">Enter the Code Sent to</string>
    <string name="don_t_receive_the_code_verification">Don\'t receive the Code Verification ?</string>
    <string name="resend">RESEND CODE</string>
    <string name="verify">Verify</string>
    <string name="login_string">Already have an account? <b>Login here</b></string>

    <string name="open_navigation_drawer">Open Drawer</string>
    <string name="close_navigation_drawer">Open Drawer</string>

    <string name="search_place">Search Place</string>

    <string name="API_KEY">AIzaSyC-yh7Nfy7ucFc0MIp4C9sPNGVcOwMwjpc</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>